src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Pan_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pan Card</label>
        <referenceTo>Pan_Card__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_Of_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year Of Class</label>
        <referenceTo>Year_Of_Class__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>student_no__c</fullName>
        <label>student no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>